deployment/k8s/base/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orchestrator
  namespace: orchestrator
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "orchestrator.com.tw"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: path-rule
  namespace: orchestrator
spec:
  gateways:
    - orchestrator
  hosts:
    - "orchestrator.com.tw"
  http:
    - match:
        - uri:
            prefix: /booking
      route:
        - destination:
            host: api
            port:
              number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: burnner
  namespace: orchestrator
spec:
  hosts:
    - "burnner"
  http:
    - route:
        - destination:
            host: burnner
            port:
              number: 10000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orchestrator
  namespace: orchestrator
spec:
  hosts:
    - "orchestrator"
  http:
    - route:
        - destination:
            host: orchestrator
            port:
              number: 10000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nats-streaming
  namespace: orchestrator
spec:
  hosts:
    - "nats-streaming"
  tcp:
    - route:
        - destination:
            host: nats-streaming
            port:
              number: 4222
